--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,8 @@
     "moduleDetection": "force",
     "noEmit": true,
     "allowJs": true,
-    "jsx": "react-jsx",
+  "jsx": "react-jsx",
+  "types": ["react", "react-dom"],
 
     /* Linting */
     "strict": true,
